# ui

./: .gitignore  pyproject.toml
app/: .gitignore
app/ui/: state.py  ui.py
app/ui/components/: __init__.py  chat.py  modal.py  navbar.py  spline.py
