[tool.poetry]
name = "ui"
version = "0.1.0"
description = ""
authors = ["joshi.rohit <joshi.rohit@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
reflex = "^0.5.7"
openai = "^1.37.1"
python-dotenv = "^1.0.1"
reflex-spline = "^0.0.1"
reflex-clerk = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
